unpackaged/main/default/objects/Customer_Assessment__c/Customer_Assessment__c.object-meta.xml
<CustomObject>
    <label>Customer Assessment</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>