unpackaged/main/default/objects/Customer_Assessment__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grade A</fullName>
            </value>
            <value>
                <fullName>Grade B</fullName>
            </value>
            <value>
                <fullName>Grade C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>