unpackaged/main/default/objects/Customer_Assessment__c/fields/No_Of_Lost_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Lost_Opportunity__c</fullName>
    <formula>Account__r.ETSALES_No_Of_Lost_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Lost Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>